# mafis

./: .editorconfig  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELIABILITY.md  REPRODUCIBILITY.md  ROADMAP.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.claude/agents/: build-validator.md  topology-designer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-wasm.yml
.zed/: tasks.json
analysis/: braess_analysis.py  constants.py  scale_sensitivity_analysis.py  scheduler_effect_analysis.py  solver_resilience_analysis.py  stats.py  topology_effect_analysis.py
cli/: Cargo.toml
cli/src/: app.rs  logo.rs  main.rs  repl.rs  shell.rs  style.rs
cli/src/commands/: build.rs  config.rs  experiment.rs  fault.rs  fun.rs  info.rs  mod.rs  results.rs  solver.rs  status.rs  test.rs  topology.rs
docs/: solver_fidelity.md
docs/architecture/: README.md
docs/papers/: literature-review.md
docs/references/: solver-papers.md
docs/solvers/: README.md
docs/topologies/: README.md
examples/: fault_config.toml
scripts/: reproduce.sh
src/: constants.rs  lib.rs  main.rs
src/analysis/: baseline.rs  (+9 more)
tests/: benchmarks.rs  calibration.rs  clean_benchmark_validation.rs  desktop_build.rs  experiment_suite.rs  metamorphic.rs  paper_experiments.rs  robustness.proptest-regressions  robustness.rs  scale_tests.rs  trace_rapidity.rs  verification.rs
topologies/: build-manifest.sh  compact-grid.json  fulfilment-center.json  kiva-warehouse.json  manifest.json  sorting-center.json  warehouse-dual-dock.json  warehouse-large.json  warehouse-medium.json  warehouse-sd-w2.json  warehouse-sd-w3.json  warehouse-single-dock-w2.json  warehouse-single-dock-w3.json  warehouse-single-dock.json
web/: app.js  experiment-worker.js  index.html  llms.txt  mafis.d.ts  mafis.js  mafis_bg.wasm.d.ts  mapmaker.html  mapmaker.js  robots.txt  sitemap.xml  styles.css
(+153 files in other folders)
