[package]
name = "mafis-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mafis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "suggestions"] }
rustyline = { version = "14", features = ["with-file-history"] }
crossterm = "0.28"
owo-colors = "4"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
open = "5"
which = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
comfy-table = "7"
dirs = "6"
glob = "0.3"
notify = "7"
ctrlc = "3.4"
anyhow = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap_complete = "4"
